--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="">
-      <meta name="author" content="">
+      <!-- Primary Meta Tags -->
+      <title>Website Blueprints for Startups & Makers</title>
+      <meta name="title" content="Website Blueprints for Startups & Makers">
+      <meta name="description" content="Planning of building a website? This helps to start from the best examples.">
+
+      <!-- Open Graph / Facebook -->
+      <meta property="og:type" content="website">
+      <meta property="og:url" content="https://www.makersthemes.com/">
+      <meta property="og:title" content="Website Blueprints for Startups & Makers">
+      <meta property="og:description" content="Planning of building a website? This helps to start from the best examples.">
+      <meta property="og:image" content="assets/img/preview.png">
+
+      <!-- Twitter -->
+      <meta property="twitter:card" content="summary_large_image">
+      <meta property="twitter:url" content="https://www.makersthemes.com/">
+      <meta property="twitter:title" content="Website Blueprints for Startups & Makers">
+      <meta property="twitter:description" content="Planning of building a website? This helps to start from the best examples.">
+      <meta property="twitter:image" content="assets/img/preview.png">
      <link rel="icon" href="assets/img/icons/anger-emote.png">
       <link rel="stylesheet" href="assets/css/app.css ">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
