--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <!-- Primary Meta Tags -->
       <title>Website Blueprints for Startups & Makers</title>
       <meta name="title" content="Website Blueprints for Startups & Makers">
-      <meta name="description" content="Planning of building a website? This helps to start from the best examples.">
+      <meta name="description" content="Planning of Make a website? This helps to start from the best examples.">
 
       <!-- Open Graph / Facebook -->
       <meta property="og:type" content="website">
@@ -215,6 +215,67 @@
           </div>
         </div>
       </section>
+      <section class="pt-3 pb-5">
+              <div class="container">
+                <div class="row d-flex ">
+                  <div class="col-12 col-md-4 mb-5">
+                    <div class="card mb-3 mt-5 h-100 mb-3 ">
+                      <img class="card-img-top" src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/9759d90700263dc3350f6a3deac7592a/retina/19.png" alt="Alt text">
+                      <div class="card-body py-3">
+                        <h5>Bootstrap 4 Freebie Colorful Analitics App Landing Page #2
+
+      </h5>
+                        <div class="mb-4">
+                        </div>
+                      </div>
+                      <div class="card-footer bg-white">
+                        <a href="https://gum.co/QyDlE" class="d-flex justify-content-between align-items-center gumroad-button" target="_blank"><span class="gumroad-button-logo"></span>
+                          <h6 class="mb-0">Download </h6>
+                          <i class="fas fa-download"> </i>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-12 col-md-4 mb-5">
+                    <div class="card mb-3 mt-5 h-100 mb-3 ">
+          <div class="position-absolute badge bg-warning lead" style="top: 3px; right:10px">BUNDLE</div>
+                      <img class="card-img-top" src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/5c73efad9c642b15a6b2f36a51651524/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%288%29.png" alt="Alt text">
+
+                      <div class="card-body py-3">
+                        <h5>⭐️ [ All-in-one bundle ] 1$ MakersThemes Club Download All in 1 click &amp; Support the Project
+
+      </h5>
+                        <div class="mb-4">
+                        </div>
+                      </div>
+                      <div class="card-footer bg-white">
+                        <a href="https://gum.co/TXoLF" class="d-flex justify-content-between align-items-center gumroad-button" target="_blank"><span class="gumroad-button-logo"></span>
+                          <h6 class="mb-0">Download</h6>
+                          <i class="fas fa-download"> </i>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-12 col-md-4 mb-5">
+                    <div class="card mb-3 mt-5   mb-3 h-100">
+                      <img class="card-img-top" src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/8356a7c2fcf06045745bf8147bd529f2/retina/18.png" alt="Alt text">
+
+                      <div class="card-body py-3">
+                        <h5>Bootstrap 4 Freebie Business Home &amp; Landing Page w/ Hero Image and Carousel Blog Slider
+
+                        </h5>
+                      </div>
+                      <div class="card-footer bg-white">
+                        <a href="https://gum.co/suHvf" class="d-flex justify-content-between align-items-center gumroad-button" target="_blank"><span class="gumroad-button-logo"></span>
+                          <h6 class="mb-0">Download</h6>
+                          <i class="fas fa-download"> </i>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
       <section class="pt-3 pb-5">
         <div class="container">
           <div class="row d-flex ">
