--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
                   <div class="col-12 col-md-4 mb-5">
                     <div class="card mb-3 mt-5 h-100 mb-3 ">
                       <img class="lazy card-img-top"
-                      src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/9759d90700263dc3350f6a3deac7592a/retina/19.png"
-                      data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/9759d90700263dc3350f6a3deac7592a/retina/19.png"
+                      src="assets/img/350x210.png"
+                      data-src="assets/img/11.png"
                       alt="Alt text">
                       <div class="card-body py-3">
                         <h5>Bootstrap 4 Freebie Colorful Analitics App Landing Page #2
@@ -232,7 +232,7 @@
                         </div>
                       </div>
                       <div class="card-footer bg-white">
-                        <a href="https://gum.co/QyDlE" class="d-flex justify-content-between align-items-center gumroad-button" target="_blank"><span class="gumroad-button-logo"></span>
+                        <a rel="nofollow" href="https://gum.co/QyDlE" class="d-flex justify-content-between align-items-center gumroad-button" target="_blank"><span class="gumroad-button-logo"></span>
                           <h6 class="mb-0">Download </h6>
                           <i class="fas fa-download"> </i>
                         </a>
@@ -243,9 +243,8 @@
                     <div class="card mb-3 mt-5 h-100 mb-3 ">
           <div class="position-absolute badge bg-warning lead" style="top: 3px; right:10px">BUNDLE</div>
                       <img class="lazy card-img-top"
-                      src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/5c73efad9c642b15a6b2f36a51651524/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%288%29.png"
-                      data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/5c73efad9c642b15a6b2f36a51651524/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%288%29.png"
-
+                      src="assets/img/350x210.png"
+                      data-src="assets/img/12.png"
                       alt="Alt text">
 
                       <div class="card-body py-3">
@@ -266,8 +265,8 @@
                   <div class="col-12 col-md-4 mb-5">
                     <div class="card mb-3 mt-5   mb-3 h-100">
                       <img class="lazy card-img-top"
-                      src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/8356a7c2fcf06045745bf8147bd529f2/retina/18.png"
-                        data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/8356a7c2fcf06045745bf8147bd529f2/retina/18.png"
+                      src="assets/img/350x210.png"
+                      data-src="assets/img/13.png"
                       alt="Alt text">
 
                       <div class="card-body py-3">
@@ -292,9 +291,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5 h-100 mb-3 ">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/c66e9c441fee6aeef3631e16f1373373/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%286%29.jpg"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/c66e9c441fee6aeef3631e16f1373373/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%286%29.jpg"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/14.jpg"  alt="Alt text">
                 <div class="card-body py-3">
                   <h5>Local Guides - Bootstrap 4 Home Booking &amp; Travel Service Landing Page </h5>
                   <div class="mb-4">
@@ -311,9 +309,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5 h-100 mb-3 ">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/1ad758a3b9570dbff34567d0023d609b/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%286%29.png"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/1ad758a3b9570dbff34567d0023d609b/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%286%29.png"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/15.png"  alt="Alt text">
 
                 <div class="card-body py-3">
                   <h5>Bootstrap v4 Cards &amp; Columns Template Inspired by NomadList project</h5>
@@ -331,9 +328,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5   mb-3 h-100">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/fb29654243eb34f90351dc1c84efbfb1/retina/9.png"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/fb29654243eb34f90351dc1c84efbfb1/retina/9.png"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/16.png"  alt="Alt text">
                 <div class="position-absolute badge bg-danger lead" style="top: 3px; right:10px">NEW</div>
                 <div class="card-body py-3">
                   <h5>AOS - Bootstrap 4 Premium Landing Page Template + SASS + GULPJS. Regular Price: $18. LIMITED TIME GET FOR $0!
@@ -356,9 +352,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5 h-100 mb-3 ">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/5c959e0fbb601087ffeb30663a73a5c4/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%284%29.jpg"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/5c959e0fbb601087ffeb30663a73a5c4/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%284%29.jpg"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/17.jpg"  alt="Alt text">
                 <div class="card-body py-3">
                   <h5>Bootstrap v.4 - Business &amp; Corporate Home Page HTML5 Template Freebie
                   </h5>
@@ -376,9 +371,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5 h-100 mb-3 ">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/39aab9e4bdcce0bcaab9682dc2b0e4d3/retina/_D0_A1_D0_BD_D0_B8_D0_BC_D0_BE_D0_BA_20_D1_8D_D0_BA_D1_80_D0_B0_D0_BD_D0_B0_202019-01-02_20_D0_B2_2022.56.53.png"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/39aab9e4bdcce0bcaab9682dc2b0e4d3/retina/_D0_A1_D0_BD_D0_B8_D0_BC_D0_BE_D0_BA_20_D1_8D_D0_BA_D1_80_D0_B0_D0_BD_D0_B0_202019-01-02_20_D0_B2_2022.56.53.png"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/18.png"  alt="Alt text">
                 <div class="card-body py-3">
                   <h5>Blueprints Freebie Sample - 6 Bootstrap v4 templates in one box</h5>
                   <div class="mb-4">
@@ -395,9 +389,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5   mb-3 h-100">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/bfe503fd145547b8bea73fda1b887d08/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%282%29.jpg"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/bfe503fd145547b8bea73fda1b887d08/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%282%29.jpg"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/19.jpg"  alt="Alt text">
                 <div class="card-body py-3">
                   <h5>Bootstrap 4 hero form freebie HTML5 template</h5>
                 </div>
@@ -419,9 +412,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5 h-100 mb-3 ">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/2d36a2940d6819fdc24c628b008332e6/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%285%29.jpg"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/2d36a2940d6819fdc24c628b008332e6/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%285%29.jpg"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/20.jpg"  alt="Alt text">
                 <div class="card-body py-3">
                   <h5>Bootstrap 4 - Lead Magnet Landing Page w/ Hero Form Dark Theme
                   </h5>
@@ -439,9 +431,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5 h-100 mb-3 ">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/e9c8782239edff09cf90cf6175cb5788/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%283%29.jpg"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/e9c8782239edff09cf90cf6175cb5788/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%283%29.jpg"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/21.jpg"  alt="Alt text">
                 <div class="card-body py-3">
                   <h5>Bootstrap 4 HTML5 Simple App Download Landing Page Freebie</h5>
                   <div class="mb-4">
@@ -458,9 +449,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5   mb-3 h-100">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/4f7b5ced19c8d7a4e2ea295447ef3e48/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4.png"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/4f7b5ced19c8d7a4e2ea295447ef3e48/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4.png"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/22.png"  alt="Alt text">
                 <div class="card-body py-3">
                   <h5>Bootstrap 4 Modern Blog Home Page HTML5 Template Freebie - Made w/ Blueprints App
                   </h5>
@@ -483,9 +473,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5 h-100 mb-3 ">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/1cad683bf5a2d152fdd1b14c761b6206/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%281%29.jpg"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/1cad683bf5a2d152fdd1b14c761b6206/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%281%29.jpg"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/23.jpg"  alt="Alt text">
                 <div class="card-body py-3">
                   <h5>Blueprints freebie SaaS template Bootstrap 4</h5>
                   <div class="mb-4">
@@ -502,9 +491,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5 h-100 mb-3 ">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/735454d1192119e104bf8b3a900af97b/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%282%29.png"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/735454d1192119e104bf8b3a900af97b/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%282%29.png"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/24.png"  alt="Alt text">
                 <div class="card-body py-3">
                   <h5>Bootstrap 4 free template App Landing Page with Hero Form Lead Magnet</h5>
                   <div class="mb-4">
@@ -521,9 +509,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5   mb-3 h-100">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/a355cdcb39e904584c62991d36b67321/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%287%29.jpg"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/a355cdcb39e904584c62991d36b67321/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%287%29.jpg"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/25.jpg"  alt="Alt text">
                 <div class="card-body py-3">
                   <h5>Bootstrap 4 Simple Blog 3 column Page Freebie</h5>
                 </div>
@@ -544,9 +531,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5 h-100 mb-3 ">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/64b08e32c7dbf22e838d7e3cc950b9e4/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%281%29.png"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/64b08e32c7dbf22e838d7e3cc950b9e4/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%281%29.png"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/26.png"  alt="Alt text">
                 <div class="card-body py-3">
                   <h5>Bootstrap 4 Agency App HTML5 Landing Page Template</h5>
                   <div class="mb-4">
@@ -563,9 +549,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5 h-100 mb-3 ">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/ead50a30e318cd2fced8dbfa8d0ba0f7/retina/8.png"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/ead50a30e318cd2fced8dbfa8d0ba0f7/retina/8.png"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/27.png"  alt="Alt text">
                 <div class="card-body py-3">
                   <h5>AOS Bootstrap 4 Freebie Landing page with animations</h5>
                   <div class="mb-4">
@@ -582,9 +567,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5   mb-3 h-100">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/ebabc0695e316e08407e0911454a46ff/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%2810%29.jpg"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/ebabc0695e316e08407e0911454a46ff/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%2810%29.jpg"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/28.jpg"  alt="Alt text">
                 <div class="card-body py-3">
                   <h5>Bootstrap v4 App Landing Page HTML5 Template w/slider &amp; animations effects</h5>
                 </div>
@@ -605,9 +589,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5 h-100 mb-3 ">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/2a41bef6d1b5615fbbb5a1aa97b18921/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%285%29.png"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/2a41bef6d1b5615fbbb5a1aa97b18921/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%285%29.png"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/29.png"  alt="Alt text">
                 <div class="card-body py-3">
                   <h5>Bootstrap 4 HTML5 Website Template Landing Page With Header Form Ideal for Courses or Any Lead Generation</h5>
                   <div class="mb-4">
@@ -624,9 +607,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5 h-100 mb-3 ">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/9d57fcc6a645a751c4ff5faf8796e538/retina/Get_20it_20here__20http___bit.ly_themesclub_20%285%29.png"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/9d57fcc6a645a751c4ff5faf8796e538/retina/Get_20it_20here__20http___bit.ly_themesclub_20%285%29.png"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/30.png"  alt="Alt text">
                 <div class="card-body py-3">
                   <h5>Bootstrap 4 freebie Personal Portfolio HTML5 Website Template</h5>
                   <div class="mb-4">
@@ -643,9 +625,8 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5   mb-3 h-100">
                 <img class="lazy card-img-top"
-                src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/4491ae9e2035bc0a6449453399a0de8a/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%283%29.png"
-                data-src="https://static-2.gumroad.com/res/gumroad/6305368025575/asset_previews/4491ae9e2035bc0a6449453399a0de8a/retina/BLUEPRINTS_20FREEBIE_20TEMPLATE_20BOOTSTRAP_20v4_20%283%29.png"
-                alt="Alt text">
+                src="assets/img/350x210.png"
+                data-src="assets/img/31.png"  alt="Alt text">
                 <div class="card-body py-3">
                   <h5>Bootstrap 4 Universal multi-cards template home landing page</h5>
                 </div>
@@ -676,7 +657,7 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5 h-100 mb-3 ">
                 <img class="lazy card-img-top"
-                src="assets/img/wireframekit.png"
+                src="assets/img/350x210.png"
                 data-src="assets/img/wireframekit.png"
                 alt="Alt text">
                 <div class="card-body py-3">
@@ -694,7 +675,7 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5 h-100 mb-3 ">
                 <img class="lazy card-img-top"
-                src="assets/img/2.png"
+                src="assets/img/350x210.png"
                 data-src="assets/img/2.png"
                 alt="Alt text">
                 <div class="card-body py-3">
@@ -712,7 +693,7 @@
             <div class="col-12 col-md-4 mb-5">
               <div class="card mb-3 mt-5   mb-3 h-100">
                 <img class="lazy card-img-top"
-                src="assets/img/10.jpg"
+                src="assets/img/350x210.png"
                 data-src="assets/img/10.jpg"
                 alt="Alt text">
                 <div class="card-body py-3">
