--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                       alt="Alt text">
 
                       <div class="card-body py-3">
-                        <h5>⭐️ [ All-in-one bundle ] 1$ MakersThemes Club Download All in 1 click &amp; Support the Project
+                        <h5>⭐️ [ All-in-one bundle ] 10$ MakersThemes Club Download All in 1 click + Commercial License &amp; Support the Project
 
       </h5>
                         <div class="mb-4">
