--- a/index.html
+++ b/index.html
@@ -160,8 +160,9 @@
         <div class="container-fluid pt-5 pb-5 position-relative">
           <div class="row d-flex justify-content-between  align-items-center">
             <div class="col-md-5 text-center text-lg-left mb-5 mb-lg-0 order-2 order-md-1">
-              <h1 class="display-4   mt-5 mt-md-2 font-weight-light"><span  class="d-block w-100 font-weight-light" data-aos="fade-left" data-aos-delay="1000">Website Blueprints</span> <span  class="d-block w-100 font-weight-bold text-primary text-glow" data-aos="fade-right" data-aos-delay="1200">for Startups & Makers</span></h1>
-              <div class="my-4" data-aos="fade-up" data-aos-delay="1200">
+              <h1 class="display-4   mt-5 mt-md-2 font-weight-light"><span  class="d-block w-100 font-weight-light">Website Blueprints</span>
+                <span  class="d-block w-100 font-weight-bold text-primary text-glow">for Startups & Makers</span></h1>
+              <div class="my-4" >
                 <p class="lead  ">If your startup is in the planning of building a website, or if you’re looking for a refresh, this helps to start at some of the best examples of startup websites for cues.</p>
               </div>
               <!--<div class="d-flex justify-content-center justify-content-lg-start" >
@@ -187,7 +188,7 @@
               </div>
               <div class="row d-flex justify-content-between  align-items-center mt-2">
                 <div class="col-md-6">
-                      <a href="#downloadAll" class="btn btn-primary  btn-block btn-lg ml-md-3 ml-md-auto mt-5" data-aos="fade-left" data-aos-delay="1500">DOWNLOAD</a>
+                      <a href="#downloadAll" class="btn btn-primary  btn-block btn-lg ml-md-3 ml-md-auto mt-5">DOWNLOAD</a>
                 </div>
                 <!--<div class="col-md-6">
                     <a href="#" class="btn btn-outline-primary  btn-block  btn-lg ml-md-3 ml-md-auto mt-md-5 mt-3" data-aos="fade-right" data-aos-delay="1500">SIGN UP</a>
@@ -196,7 +197,7 @@
             </div>
             <div class="col-md-6 order-1 order-md-2">
               <div class="layer-img-wrapper laya-vr layer-2 ">
-                <img  src="assets/img/undraw_noted_pc9f.svg" alt="" class=" img-fluid d-block my-auto" data-aos="zoom-in" data-aos-delay="300">
+                <img  src="assets/img/undraw_noted_pc9f.svg" alt="" class=" img-fluid d-block my-auto" data-aos="zoom-in" data-aos-delay="100">
               </div>
             </div>
           </div>
