--- a/index.html
+++ b/index.html
@@ -1049,7 +1049,7 @@ If you find a template that really seems like something you could use, it’s pr
       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
       <!--<script src="assets/js/app.js"></script>-->
       <script src="https://gumroad.com/js/gumroad.js"></script>
-      <script>
+    <!--  <script>
         //hero header animation
         const elems = document.querySelectorAll('.laya-vr');
         const layer2 = document.querySelector('.layer-1');
@@ -1062,7 +1062,7 @@ If you find a template that really seems like something you could use, it’s pr
             layer2.style.transform = "translateY(" + mouseMoved2 + "px)";
             layer3.style.transform = "translateX(" + mouseMoved3 + "px)";
         });
-      </script>
+      </script>-->
       <script language="JavaScript">
        var s=document.getElementsByTagName('script')[0];
        var sc=document.createElement('script');
