--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <meta property="twitter:image" content="https://www.makersthemes.com/assets/img/preview.png">
      <link rel="icon" href="assets/img/icons/anger-emote.png">
       <link rel="stylesheet" href="assets/css/app.css ">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
-      <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,700&display=swap" rel="stylesheet">
+      <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">-->
+      <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,400,600,700&display=swap" rel="stylesheet">
       <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
       <link rel="stylesheet" href="assets/css/style.css">
@@ -235,7 +235,7 @@
                       <div class="card-footer bg-white">
                         <a rel="nofollow" href="https://gum.co/QyDlE" class="d-flex justify-content-between align-items-center gumroad-button" target="_blank"><span class="gumroad-button-logo"></span>
                           <h6 class="mb-0">Download </h6>
-                          <i class="fas fa-download"> </i>
+                          <img src="assets/img/icons/download.svg" class="img-fluid">
                         </a>
                       </div>
                     </div>
@@ -258,7 +258,7 @@
                       <div class="card-footer bg-white">
                         <a href="https://gum.co/TXoLF" class="d-flex justify-content-between align-items-center gumroad-button" target="_blank"><span class="gumroad-button-logo"></span>
                           <h6 class="mb-0">Download</h6>
-                          <i class="fas fa-download"> </i>
+                          <img src="assets/img/icons/download.svg" class="img-fluid">
                         </a>
                       </div>
                     </div>
@@ -278,7 +278,7 @@
                       <div class="card-footer bg-white">
                         <a href="https://gum.co/suHvf" class="d-flex justify-content-between align-items-center gumroad-button" target="_blank"><span class="gumroad-button-logo"></span>
                           <h6 class="mb-0">Download</h6>
-                          <i class="fas fa-download"> </i>
+                          <img src="assets/img/icons/download.svg" class="img-fluid">
                         </a>
                       </div>
                     </div>
@@ -302,7 +302,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/KvFzfI" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download </h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -321,7 +321,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/ddjn" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download</h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -339,7 +339,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/NaIyY" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download</h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -364,7 +364,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/yMedZ" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download </h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -382,7 +382,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/blueprints-freebie" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download</h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -398,7 +398,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/bootstrap4-free-template" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download</h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -424,7 +424,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/iRHxf" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download </h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -442,7 +442,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/ucriu" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download</h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -459,7 +459,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/gxmNU" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download</h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -484,7 +484,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/dNNyq" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download </h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -502,7 +502,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/rVBcP" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download</h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -518,7 +518,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/krMkX" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download</h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -542,7 +542,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/ajfES" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download </h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -560,7 +560,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/fibKp" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download</h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -576,7 +576,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/Yhxqf" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download</h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -600,7 +600,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/PWtZW" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download </h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -618,7 +618,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/oEzRO" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download</h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
@@ -634,7 +634,7 @@
                 <div class="card-footer bg-white">
                   <a href="https://gum.co/BDKAK" class="d-flex justify-content-between align-items-center gumroad-button">
                     <h6 class="mb-0">Download</h6>
-                    <i class="fas fa-download"> </i>
+                    <img src="assets/img/icons/download.svg" class="img-fluid">
                   </a>
                 </div>
               </div>
